Adicionado arquivo index e modificações no arquivo js

--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 
     </head>
     <body>
-
-
+        <h2>Calculadora IMC</h2>
+        <hr>
+        <p id="info">
+            
+            Nome: <span id="nome"></span> <input type="text">
+            Peso: <span id="peso"></span> <input type="number">
+            Altura: <span id="altura"></span> <input type="number"> 
+            IMC: <span id="imc"></span><input type="number"> 
+            
+        </p>
 
     </body>
-    <script src="js/main.js"></script>
+    <script src="js/controller.js"></script>
 </html>
